@@ -135,12 +135,14 @@ BUILDTIME_DIR_AUTOCREATE = \
 
 BUILDTIME_DIRS = \
 	$(BUILDTIME_DIR_AUTOCREATE) \
-	doc/html
+	doc/html \
+	doc/man-html
 
 DIRCHECK_EXCLUDE = \
 	$(BUILDTIME_DIRS) \
 	ganeti-[0-9]*.[0-9]*.[0-9]* \
 	doc/html/_* \
+	doc/man-html/_* \
 	autom4te.cache
 
 # some helper vars
@@ -171,6 +173,8 @@ CLEANFILES = \
 	$(SHELL_ENV_INIT) \
 	daemons/daemon-util \
 	daemons/ganeti-cleaner \
+	$(mandocrst) \
+	doc/manpages-enabled.rst \
 	$(BUILT_EXAMPLES) \
 	doc/examples/bash_completion \
 	doc/examples/bash_completion-debug \
@@ -403,6 +407,7 @@ docinput = \
 	doc/install-quick.rst \
 	doc/install.rst \
 	doc/locking.rst \
+	doc/manpages-disabled.rst \
 	doc/move-instance.rst \
 	doc/news.rst \
 	doc/ovfconverter.rst \
@@ -411,6 +416,9 @@ docinput = \
 	doc/upgrade.rst \
 	doc/virtual-cluster.rst \
 	doc/walkthrough.rst
+
+# Generates file names such as "doc/man-gnt-instance.rst"
+mandocrst = $(addprefix doc/man-,$(notdir $(manrst)))
 
 # Haskell programs to be installed in $PREFIX/bin
 HS_BIN_PROGS=src/htools
@@ -580,29 +588,44 @@ HS_BUILT_SRCS_IN = $(patsubst %,%.in,$(HS_BUILT_SRCS))
 
 $(RUN_IN_TEMPDIR): | stamp-directories
 
+doc/html/index.html: ENABLE_MANPAGES =
+doc/man-html/index.html: ENABLE_MANPAGES = 1
+doc/man-html/index.html: doc/manpages-enabled.rst $(mandocrst)
+
 # Note: we use here an order-only prerequisite, as the contents of
 # _autoconf.py are not actually influencing the html build output: it
 # has to exist in order for the sphinx module to be loaded
 # successfully, but we certainly don't want the docs to be rebuilt if
 # it changes
-doc/html/index.html: $(docinput) doc/conf.py configure.ac \
-	$(RUN_IN_TEMPDIR) lib/build/sphinx_ext.py \
+doc/html/index.html doc/man-html/index.html: $(docinput) doc/conf.py \
+	configure.ac $(RUN_IN_TEMPDIR) lib/build/sphinx_ext.py \
 	lib/build/shell_example_lexer.py lib/opcodes.py lib/ht.py \
 	doc/css/style.css \
 	| $(BUILT_PYTHON_SOURCES)
 	@test -n "$(SPHINX)" || \
 	    { echo 'sphinx-build' not found during configure; exit 1; }
-	@mkdir_p@ $(dir $@)
-	PYTHONPATH=. $(RUN_IN_TEMPDIR) $(SPHINX) -q -W -b html \
+if !MANPAGES_IN_DOC
+	if test -n '$(ENABLE_MANPAGES)'; then \
+	  echo 'Man pages in documentation were disabled at configure time' >&2; \
+	  exit 1; \
+	fi
+endif
+	dir=$(dir $@) && \
+	@mkdir_p@ $$dir && \
+	PYTHONPATH=. ENABLE_MANPAGES=$(ENABLE_MANPAGES) \
+	$(RUN_IN_TEMPDIR) bash autotools/sphinx-wrapper $(SPHINX) -q -W -b html \
 	    -d . \
 	    -D version="$(VERSION_MAJOR).$(VERSION_MINOR)" \
 	    -D release="$(PACKAGE_VERSION)" \
 	    -D graphviz_dot="$(DOT)" \
-	    $(abs_top_builddir)/doc $(CURDIR)/doc/html
-	rm -f doc/html/.buildinfo doc/html/objects.inv
+	    -D enable_manpages="$(ENABLE_MANPAGES)" \
+	    doc $(CURDIR)/$$dir && \
+	rm -f $$dir/.buildinfo $$dir/objects.inv
 	touch $@
 
 doc/html: doc/html/index.html
+
+doc/man-html: doc/man-html/index.html
 
 doc/install-quick.rst: INSTALL
 doc/news.rst: NEWS
@@ -616,6 +639,34 @@ doc/install-quick.rst doc/news.rst doc/upgrade.rst:
 	  cat $<; \
 	} > $@
 
+doc/manpages-enabled.rst: Makefile | $(built_base_sources)
+	{ echo '.. This file is automatically generated, do not edit!'; \
+	  echo ''; \
+	  echo 'Man pages'; \
+	  echo '========='; \
+	  echo; \
+	  echo '.. toctree::'; \
+	  echo '   :maxdepth: 1'; \
+	  echo; \
+	  for i in $(notdir $(mandocrst)); do \
+	    echo "   $$i"; \
+	  done | LC_ALL=C sort; \
+	} > $@
+
+doc/man-%.rst: man/%.gen Makefile $(REPLACE_VARS_SED) | $(built_base_sources)
+if MANPAGES_IN_DOC
+	{ echo '.. This file is automatically updated at build time from $<.'; \
+	  echo '.. Do not edit.'; \
+	  echo; \
+	  echo "$*"; \
+	  echo '=========================================='; \
+	  tail -n +3 $< | sed -f $(REPLACE_VARS_SED); \
+	} > $@
+else
+	echo 'Man pages in documentation were disabled at configure time' >&2; \
+	exit 1;
+endif
+
 # Things to build but not to install (add it to EXTRA_DIST if it should be
 # distributed)
 noinst_DATA = \
@@ -624,6 +675,10 @@ noinst_DATA = \
 	doc/examples/bash_completion \
 	doc/examples/bash_completion-debug \
 	$(manhtml)
+
+if MANPAGES_IN_DOC
+noinst_DATA += doc/man-html
+endif
 
 gnt_scripts = \
 	scripts/gnt-backup \
@@ -806,6 +861,7 @@ EXTRA_DIST = \
 	autotools/convert-constants \
 	autotools/docpp \
 	autotools/gen-py-coverage \
+	autotools/sphinx-wrapper \
 	autotools/testrunner \
 	autotools/wrong-hardcoded-paths \
 	$(RUN_IN_TEMPDIR) \
@@ -1632,6 +1688,11 @@ dist-hook:
 	$(MAKE) $(AM_MAKEFLAGS) regen-vcs-version
 	rm -f $(top_distdir)/vcs-version
 	cp -p $(srcdir)/vcs-version $(top_distdir)
+if MANPAGES_IN_DOC
+	echo 'Building distribution with man pages included in documentation is' \
+	     'not allowed as they can contain fixed paths' >&2; \
+	exit 1
+endif
 
 # a distcheck hook rule for catching revision control directories
 distcheck-hook:
