@@ -9,10 +9,10 @@ tmpdir=$(mktemp -d -t gntbuild.XXXXXXXX)
 trap "rm -rf $tmpdir" EXIT
 
 # fully copy items
-cp -r autotools daemons scripts lib tools qa $tmpdir
+cp -r doc autotools daemons scripts lib tools qa $tmpdir
 
-mkdir $tmpdir/doc
-ln -s $PWD/doc/examples $tmpdir/doc
+#mkdir $tmpdir/doc
+#ln -s $PWD/doc/examples $tmpdir/doc
 
 mkdir $tmpdir/test/
 cp -r test/py $tmpdir/test/py
