@@ -13,6 +13,8 @@
 
 import sys, os
 
+enable_manpages = bool(os.getenv("ENABLE_MANPAGES"))
+
 # If extensions (or modules to document with autodoc) are in another directory,
 # add these directories to sys.path here. If the directory is relative to the
 # documentation root, use os.path.abspath to make it absolute, like shown here.
@@ -21,7 +23,7 @@ import sys, os
 # -- General configuration -----------------------------------------------------
 
 # If your documentation needs a minimal Sphinx version, state it here.
-#needs_sphinx = "1.0"
+needs_sphinx = "1.0"
 
 # Add any Sphinx extension module names here, as strings. They can be extensions
 # coming with Sphinx (named "sphinx.ext.*") or your custom ones.
@@ -70,6 +72,13 @@ language = "en"
 
 # List of documents that shouldn't be included in the build.
 #unused_docs = []
+
+if enable_manpages:
+  exclude_patterns = []
+else:
+  exclude_patterns = [
+    "man-*.rst",
+    ]
 
 # List of directories, relative to source directory, that shouldn't be searched
 # for source files.
