@@ -1,0 +1,11 @@
+Man pages
+=========
+
+Inclusion of man pages into documentation was not enabled at build time;
+use ``./configure [...] --enable-manpages-in-doc``.
+
+.. vim: set textwidth=72 :
+.. Local Variables:
+.. mode: rst
+.. fill-column: 72
+.. End:
